--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="app">
   <head>
+    <script src="js/lib/jquery-1.10.1.min.js"></script>
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/parsing.js"></script>
+		<title>Ground Motion Selector</title>
   </head>
-  <body>
+  <body ng-controller="MainCtrl">
     <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <input type="file" id="inputFileSelect" />
       <hr>
-      <h1>Hello {{yourName}}!</h1>
+      <pre>{{parsedOutput}}</pre>
     </div>
   </body>
 </html>
