--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
 <html ng-app="app">
   <head>
-    <script src="js/lib/jquery-1.10.1.min.js"></script>
+		<meta charset="utf-8"> 
+		<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/chart.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/15.d3.v3.min.js"></script>
+    <script src="js/lib/jquery-1.10.1.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/chart.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/parsing.js"></script>
 		<title>Ground Motion Selector</title>
   </head>
   <body ng-controller="MainCtrl">
-    <div>
+    <div class="mainbody">
+			<h2>Ground Motion Selector</h2>
+			<hr />
       <input type="file" id="inputFileSelect" />
-      <hr>
+      <hr />
+			<chart id="chart1" data="chart1Data" scale="linear" width="800px" height="400px"></chart>
       <pre>{{parsedOutput}}</pre>
     </div>
   </body>
