--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -5,24 +5,30 @@
 		<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/chart.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!-- Load Angular now -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		<title>Ground Motion Selector</title>
   </head>
   <body ng-controller="MainCtrl">
     <div class="mainbody">
 			<h2>Ground Motion Selector</h2>
+			<p>Description goes here.</p>
 			<hr />
       <input type="file" id="inputFileSelect" />
 			<hr />
+			<h2 ng-show="chartData.length > 0">GCIM Charts</h2>
+			<div ng-show="!!SAChartData">
+				<chart id="'SAchart'" data="SAChartData" scale="log" width="700px" height="400px"></chart>
+			</div>
 			<div ng-repeat="chart in chartData" style="display:inline-block">
 				<chart id="'chart' + $index" data="chart" scale="linear" width="700px" height="400px"></chart>
 				<hr />
 			</div>
-      <pre>{{parsedOutput}}</pre>
+      <!-- <pre>{{ inputJsonString }}</pre> -->
     </div>
 		
 		
-		<!-- Load scripts at the end -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+		<!-- Load scripts other than Angular at the end -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.0.8/d3.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
