--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -49,6 +49,7 @@
 		
 		
 		<!-- Load scripts other than Angular at the end -->
+		<script src="js/lib/seedrandom-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.0.8/d3.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
