Almost finished selection algorithm. Still needs some debugging.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -104,6 +104,10 @@
 				<p>First line of database:</p>
 				<pre>{{ databaseData }}</pre>
 			</span>
+			<span ng-show="!!debugOutput">
+				<p>Algorithm output:</p>
+				<pre>{{ debugOutput }}</pre>
+			</span>
       <!-- <pre>{{ inputJsonString }}</pre> -->
     </div>
   </body>
