Fix small bug with retrieving database records.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -102,7 +102,7 @@
 			<h3>Debug output</h3>
 			<span ng-show="dbLoaded">
 				<p>First line of database:</p>
-				<pre>{{ databaseData }}</pre>
+				<pre>{{ databaseFirstLine }}</pre>
 			</span>
 			<span ng-show="!!debugOutput">
 				<p>Algorithm output:</p>
