Update title and description text and add credits.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -23,8 +23,8 @@
   </head>
   <body ng-controller="MainCtrl">
     <div class="mainbody">
-			<h2>Ground Motion Selector</h2>
-			<p>This is a tool for selecting ground motions for use in seismic response analysis.</p>
+			<h2>Ground Motion Selection based on the GCIM method</h2>
+			<p>This is a web-tool for selecting ground motions based on the GCIM method (Bradley, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2010/Bradley_GCIMholisticGMselection_EESD_2010.pdf">2010</a>, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2012/Bradley_GCIMconsistentGMselection_SDEE_2012.pdf">2012</a>).</p>
 			<div class="input panel">
 				<p>
 					<b>Select random realizations file (OpenSHA format): <input type="file" id="inputFileSelect" /></b>
@@ -186,5 +186,10 @@
 			</span>
       <!-- <pre>{{ inputJsonString }}</pre> -->
     </div>
+		
+		<!-- Credits -->
+		<div class="credits">
+			Created by <a href="https://sites.google.com/site/brendonabradley/">Brendon Bradley</a> and <a href="http://joey.scarr.co.nz/">Joey Scarr</a>
+		</div>
   </body>
 </html>
