Open sample input file in new tab.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -214,7 +214,7 @@
 					This file should be a GCIM output file created by OpenSHA.
 				</p>
 				<p>
-					<a href="examples/ExampleOpenSHA_GCIMresults.txt">Click here for an example input file.</a>
+					<a href="examples/ExampleOpenSHA_GCIMresults.txt" target="_blank">Click here for an example input file.</a>
 				</p>
 			</div>
 			<div class="modal-footer">
