Make all links open in new tabs.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -24,7 +24,7 @@
   <body ng-controller="MainCtrl">
     <div class="mainbody">
 			<h2>Ground Motion Selection based on the GCIM method</h2>
-			<p>This is a web-tool for selecting ground motions based on the GCIM method (Bradley, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2010/Bradley_GCIMholisticGMselection_EESD_2010.pdf">2010</a>, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2012/Bradley_GCIMconsistentGMselection_SDEE_2012.pdf">2012</a>).</p>
+			<p>This is a web-tool for selecting ground motions based on the GCIM method (Bradley, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2010/Bradley_GCIMholisticGMselection_EESD_2010.pdf" target="_blank">2010</a>, <a href="https://dl.dropboxusercontent.com/u/35408783/webpage/Publications/Journal/2012/Bradley_GCIMconsistentGMselection_SDEE_2012.pdf" target="_blank">2012</a>).</p>
 			<div class="input panel">
 				<p>
 					<b>Select file of random realizations:</b> <input type="file" id="inputFileSelect" />
@@ -224,7 +224,7 @@
 		
 		<!-- Credits -->
 		<div class="credits">
-			Created by <a href="https://sites.google.com/site/brendonabradley/">Brendon Bradley</a> and <a href="http://joey.scarr.co.nz/">Joey Scarr</a>
+			Created by <a href="https://sites.google.com/site/brendonabradley/" target="_blank">Brendon Bradley</a> and <a href="http://joey.scarr.co.nz/" target="_blank">Joey Scarr</a>
 		</div>
   </body>
 </html>
