Debug output tidying up.

--- a/selector_server/client/index.html
+++ b/selector_server/client/index.html
@@ -193,11 +193,11 @@
 			<!-- Debug stuff goes down here -->
 			<h3 ng-show="debug">Debug output</h3>
 			<span ng-show="debug && dbLoaded">
-				<p>First line of database:</p>
+				<p>First database record:</p>
 				<pre>{{ databaseFirstLine }}</pre>
 			</span>
 			<span ng-show="debug &&!!debugOutput">
-				<p>Algorithm output:</p>
+				<p>Algorithm debug output:</p>
 				<pre>{{ debugOutput }}</pre>
 			</span>
       <!-- <pre>{{ inputJsonString }}</pre> -->
